scrollbar issue solve

--- a/src/scss/themes/general.scss
+++ b/src/scss/themes/general.scss
@@ -72,7 +72,8 @@ strong {
 }
 
 ng-scrollbar {
-        --scrollbar-thumb-color: #{$gray-500};
+        --scrollbar-thumb-color: #{$gray-300};
         --scrollbar-track-color: transparent !important;
+        --scrollbar-track-shape: 3px;
       }
     
